Fix error in form label subject, and some contrast errors in skip links

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@ h1,h2,h3,h4,h5,h6 {
   top: 0;
 }
 
+.skip-links a:link, a:visited{
+  background: #000;
+  color: #fff;
+}
+
 .container {
   max-width: 1080px;
   margin: 0 auto;
@@ -49,7 +54,7 @@ img {
 
 .main-nav ul li a {
   display: block;
-  color: #007acc;
+  color: #333;
   text-decoration: none;
   font-size: 1.25rem;
 }
